# CM2D

./: CMakeLists.txt  path_config.cmake
docs/: BlendColor_Implementation.md  BlendColor_Usage.md  ImageMagick_Architecture_Diagrams.md  ImageMagick_Final_Report.md  ImageMagick_Implementation_Summary.md  ImageMagick_Integration_Assessment.md  ImageMagick_Quick_Reference.md  ImageMagick_Usage_Guide.md  README.md  TerrainGeneration.md
example/: CMakeLists.txt  ImageMagickExample.cpp  TerrainGenExample.cpp
examples/: BlendTest.cpp  CMakeLists.txt  ChannelOpsTest.cpp  DrawCurvesTest.cpp  DrawGeometryTest.cpp  ImageMagickExample.cpp  TerrainGenExample.cpp  TransformResizeTest.cpp
examples/graphics/: BitmapFont.cpp  BitmapFont.h  CMakeLists.txt  DistributionChart2D.cpp  PlayerTraceChart2D.cpp
examples/pick/: CMakeLists.txt  Pick2DTest.cpp
inc/hgl/2d/: Bitmap.h  BitmapFont.h  BitmapImageMagick.h  BitmapLoad.h  BitmapPlatform.h  BitmapSave.h  Blend.h  ChannelMerge.h  ChannelOps.h  ChannelSplit.h  ColorConversion.h  DrawGeometry.h  MipMap.h  NoiseMap.h  PlanarBitmap.h  Resize.h  TGA.h  TerrainMap.h  Tile.h  Transform.h  VSBase.h
src/: CMakeLists.txt
src/Bitmap/: BitmapColorConversion_Channel.cpp  BitmapColorConversion_HSL.cpp  BitmapColorConversion_HSV.cpp  BitmapColorConversion_OKLab.cpp  BitmapColorConversion_RGB.cpp  BitmapColorConversion_XYZ.cpp  BitmapColorConversion_YCbCr.cpp  BitmapColorConversion_YCoCg.cpp  BitmapImageMagick.cpp  BitmapMacOS.cpp  BitmapTGAStream.cpp  BitmapWayland.cpp  BitmapWindows.cpp  BitmapX11.cpp  tga.cpp
src/Terrain/: BiomeMap.cpp  HeightMap.cpp  NoiseGenerator.cpp  PerlinNoise.cpp  SimplexNoise.cpp  TerrainGenerator.cpp  VoronoiNoise.cpp
